Sonar issues fix (#12)
* Method reference cast instead of lambda

* Dto's constants changes

* Controllers methods types changes

* Handler params convention

* Log in place of system print

* Models constructors correct

* interface params names correct

* Log handlers instead of print

* Test fixes - entities

* Remove generic wildcard from ShapeHandlerConfig

* Rename generic name

* Update logger

* Rename generic names

* Log instead System.out.print

* Comment inside contextLoads test

* Remove unused variables

* Remove modifier

* Remove throws where none Exception may be thrown

* Logger changes

* Not throwed exceptions remove

* Correct Config

* Unnecesary throws

* parametrized type for generic - sonar issue resolve

* Last issues